loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:3: error: ')' expected but '}' found.
else{ while (isFacingWall=false {forward()}} 
                                           ^