loopwhile.LoopWhile.scala.code

if (isFacingWall){	}	
else{ while (isFacingWall=false {forward()}}